--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "nodemon server/server.js",
-    "start": "node server/server.js"
+    "start": "node server/server.js",
+    "migration": "node server/migrations/db.js"
   },
   "repository": {
     "type": "git",
